--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,11 @@
 # Go to https://discord.com/developers and generate
 # a bot access token
-BOT_TOKEN=
+_BOT_TOKEN_=
 
 # Go to https://airtable.com/ and generate a API TOKEN
 # This method is only valid untill 2024
-AIRTABLE_TOKEN=
+_AIRTABLE_TOKEN_=
 
 # Container port
 # AINDA NÃO TEM USO, MAS DEIXEI AQUI
-PORT=
+_PORT_=
